<resources>
    <string name="app_name">MiniProjet</string>
    <string name="logString">Username</string>
    <string name="pwdString">Password</string>
    <string name="buttonString">Se connecter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="call_restaurant">Appeler restaurant</string>
    <string name="scan_qr">Scanner QRCode</string>
    <string name="log_out">Déconnexion</string>
</resources>
