<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailRestaurantActivity">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="260dp" />






        <Button
            android:id="@+id/call"
            android:layout_width="177dp"
            android:layout_height="48dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="260dp"
            android:text="@string/call_restaurant"/>


    <Button
        android:id="@+id/qr_code"
        android:layout_width="177dp"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="365dp"
        android:text="@string/scan_qr" />

    <Button
        android:id="@+id/log_out"
        android:layout_width="177dp"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="310dp"
        android:text="@string/log_out" />


</RelativeLayout>